--- a/CommanderGQL/CommanderGQL.csproj
+++ b/CommanderGQL/CommanderGQL.csproj
@@ -5,7 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="5.0.2" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="11.3.8" />
+    <PackageReference Include="HotChocolate.Data.Entityframework" Version="11.3.8" />
+    <PackageReference Include="Microsoft.EntityframeworkCore.Design" Version="5.0.10">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityframeworkCore.SqlServer" Version="5.0.10" />
   </ItemGroup>
 
 </Project>
